--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                                     src="./assets/images/СтрелочкаН.svg"></a></li>
                         <li class="menu-list"><a href="#">Компания<img class="arrow"
                                     src="./assets/images/СтрелочкаН.svg"></a></li>
-                        <li class="menu-list"><a href="#">Онлайн покупки<img class="arrow"
-                                    src="./assets/images/СтрелочкаН.svg"></a></li>
+                        <li class="menu-list"><a href="#">Онлайн покупки</a></li>
                     </ul>
                 </nav>
+
                 <!--Поиск-->
                 <div class="searchContainer">
                     <input type="text" placeholder="Поиск..." class="searchInput">
@@ -36,13 +36,14 @@
                         <img src="./assets/images/Лупа.svg" width="30" height="30" class="searchIcon">
                     </button>
                 </div>
+
                 <!--Бургер-меню-->
                 <img src="./assets/images/Меню.svg" id="menu">
                 <div class="burger-menu" id="burger-menu" style="display: none;">
                     <a href="#">Применения и рынки</a>
                     <a href="#">Решения</a>
 
-                    <a href="#">Продукты</a>
+                    <a href="./pages/products.html">Продукты</a>
                     <a href="#">Поддержка</a>
                     <a href="#">Компания</a>
                     <a href="#">Онлайн покупки</a>
@@ -59,7 +60,8 @@
                         <div class="hero-text">
                             <h1>СОВРЕМЕННЫЕ РЕШЕНИЯ ДЛЯ КОДИРОВАНИЯ И МАРКИРОВКИ</h1>
                             <p>Широкий ассортимент промышленных струйных принтеров</p>
-                            <a href="./pages/products.html" class="rn-button" style="text-align: center;">Ознакомьтесь с продукцией RN</a>
+                            <a href="./pages/products.html" class="rn-button" style="text-align: center;">Ознакомьтесь с
+                                продукцией RN</a>
                         </div>
                         <div class="hero-image">
                             <div class="hero-info">
@@ -78,7 +80,8 @@
                                 <li>Система предотвращения отказов</li>
                             </ul>
 
-                            <a href="./pages/marking.html" class="rn-button" style="text-align: center;">Узнать больше</a>
+                            <a href="./pages/marking.html" class="rn-button" style="text-align: center;">Узнать
+                                больше</a>
                         </div>
                         <div class="hero-image">
                             <div class="hero-info">
