--- a/pages/marking.html
+++ b/pages/marking.html
@@ -25,8 +25,7 @@
                                     src="../assets/images/СтрелочкаН.svg"></a></li>
                         <li class="menu-list"><a href="#">Компания<img class="arrow"
                                     src="../assets/images/СтрелочкаН.svg"></a></li>
-                        <li class="menu-list"><a href="#">Онлайн покупки<img class="arrow"
-                                    src="../assets/images/СтрелочкаН.svg"></a></li>
+                        <li class="menu-list"><a href="#">Онлайн покупки</a></li>
                     </ul>
                 </nav>
                 <!--Поиск-->
@@ -42,7 +41,7 @@
                     <a href="#">Применения и рынки</a>
                     <a href="#">Решения</a>
 
-                    <a href="#">Продукты</a>
+                    <a href="../pages/products.html">Продукты</a>
                     <a href="#">Поддержка</a>
                     <a href="#">Компания</a>
                     <a href="#">Онлайн покупки</a>
@@ -90,11 +89,30 @@
             </div>
         </section>
 
+        <!-- Описание -->
+        <section class="description-info">
+            <div class="description">
+                <div class="head-description">
+                    <h2>Хотите маркировать свои товары уникальным QR-кодом? <br>У RN Mark есть решение и для вас!</h2>
+                    <img src="../assets/images/RNJet100meme.png">
+                </div>
+                <p style="width: 1100px;">Компания RN MARK предлагает простые в установке струйные принтеры для
+                    маркировки мешков с
+                    цементом, удобрениями, зерном, кофе и мукой . Промышленные струйные принтеры RN Mark позволяют
+                    осуществлять бесконтактную печать и получать уникальный QR-код на каждом мешке. Вы можете легко
+                    получить информацию для QR-кодов из вашей базы данных или даже взаимодействовать с вашим текущим
+                    программным обеспечением для получения кодов в режиме реального времени. Традиционно печать на
+                    цементных мешках представляла собой сложную задачу из-за прочности материала. Однако благодаря
+                    развитию технологий теперь стало возможным печатать высококачественные QR-коды непосредственно
+                    на цементных мешках. Это открывает широкие возможности для производителей и дистрибьюторов в
+                    области идентификации и отслеживания продукции.</p>
+            </div>
+        </section>
+
         <!-- Часто задаваемые вопросы -->
         <section class="questions">
             <div class="container">
                 <h1>Часто задаваемые вопросы</h1>
-
                 <div class="questions-list">
                     <div class="item">
                         <div class="item-header">
@@ -110,7 +128,6 @@
                             условиях.</p>
                     </div>
                 </div>
-
                 <div class="questions-list">
                     <div class="item">
                         <div class="item-header">
@@ -128,6 +145,53 @@
                             факторов, как предполагаемое использование, вес продукта, условия окружающей среды и
                             бюджетные ограничения.</p>
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Список информации -->
+        <section class="links">
+            <div class="container-li">
+                <div class="sections">
+                    <h2>Решения</h2>
+                    <ul>
+                        <li><a href="#">Печатная машина с фрикционным подающим механизмом</a></li>
+                        <li><a href="#">Системы кодирования и маркировки для фармацевтики</a></li>
+                        <li><a href="#">Промышленная печать на пластиковых бутылках</a></li>
+                        <li><a href="#">Промышленная печать на стеклянных бутылках</a></li>
+                        <li><a href="#">Системы кодирования и маркировки яиц</a></li>
+                    </ul>
+                </div>
+                <div class="sections">
+                    <h2>Продукты</h2>
+                    <ul>
+                        <li><a href="#">Система массовой струйной печати</a></li>
+                        <li><a href="#">Кодировка мелкими символами</a></li>
+                        <li><a href="#">Кодировка крупными символами</a></li>
+                        <li><a href="#">Расходные материалы</a></li>
+                        <li><a href="#">Программное обеспечение</a></li>
+                    </ul>
+                </div>
+                <div class="sections">
+                    <h2>Поддержка</h2>
+                    <ul>
+                        <li><a href="#">Техническая поддержка</a></li>
+                        <li><a href="#">Запланируйте виртуальную демонстрацию</a></li>
+                        <li><a href="#">Центр загрузки</a></li>
+                        <li><a href="#">Видео</a></li>
+                        <li><a href="#">Часто задаваемые вопросы</a></li>
+                        <li><a href="#">Карта сайта</a></li>
+                    </ul>
+                </div>
+                <div class="sections">
+                    <h2>Компания</h2>
+                    <ul>
+                        <li><a href="#">О RN Mark</a></li>
+                        <li><a href="#">События</a></li>
+                        <li><a href="#">Дистрибьюторы</a></li>
+                        <li><a href="#">Брошюры о продукции</a></li>
+                        <li><a href="#">Блог</a></li>
+                    </ul>
                 </div>
             </div>
         </section>
