--- a/pages/products.html
+++ b/pages/products.html
@@ -25,8 +25,7 @@
                                     src="../assets/images/СтрелочкаН.svg"></a></li>
                         <li class="menu-list"><a href="#">Компания<img class="arrow"
                                     src="../assets/images/СтрелочкаН.svg"></a></li>
-                        <li class="menu-list"><a href="#">Онлайн покупки<img class="arrow"
-                                    src="../assets/images/СтрелочкаН.svg"></a></li>
+                        <li class="menu-list"><a href="#">Онлайн покупки</a></li>
                     </ul>
                 </nav>
                 <!--Поиск-->
@@ -42,7 +41,7 @@
                     <a href="#">Применения и рынки</a>
                     <a href="#">Решения</a>
 
-                    <a href="#">Продукты</a>
+                    <a href="../pages/products.html">Продукты</a>
                     <a href="#">Поддержка</a>
                     <a href="#">Компания</a>
                     <a href="#">Онлайн покупки</a>
