--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <!--Бургер-меню-->
                 <img src="./assets/images/Меню.svg" id="menu">
                 <div class="burger-menu" id="burger-menu" style="display: none;">
-                    <a href="#">Применения и рынки</a>
+                    <a href="./pages/application.html">Применения и рынки</a>
                     <a href="#">Решения</a>
 
                     <a href="./pages/products.html">Продукты</a>
@@ -149,8 +149,8 @@
                     </div>
                 </div>
                 <div class="button-info">
-                    <button class="button-red"><a href="pages/products.html">Принтеры RNJet</a></button>
-                    <button class="button-white"><a href="#">Почему именно RN Mark?</a></button>
+                    <a href="pages/products.html"><button class="button-red">Принтеры RNJet</button></a>
+                    <a href="#"><button class="button-white">Почему именно RN Mark?</button></a>
                 </div>
             </div>
         </section>
@@ -171,6 +171,8 @@
                         <li>Подходит для текста, логотипов, штрих-кодов</li>
                         <li>Двухцветная маркировка (RNJet 140 BC)</li>
                     </ul>
+                    <a href="pages/products.html" style="margin-bottom: 10px;"><button class="button-red">Читать
+                            дальше</button></a>
                 </div>
                 <div class="printer-info">
                     <img src="./assets/images/2 картинка.svg">
@@ -181,6 +183,7 @@
                         <li>Печать дат, временных кодов, логотипов</li>
                         <li>Компактное решение</li>
                     </ul>
+                    <a href="pages/products.html"><button class="button-red">Читать дальше</button></a>
                 </div>
                 <div class="printer-info">
                     <img src="./assets/images/3 картинка.svg">
@@ -191,6 +194,7 @@
                         <li>Устойчивость к воздействиям</li>
                         <li>Пищевые, сольвентные, водные, масляные чернила</li>
                     </ul>
+                    <a href="pages/ink.html"><button class="button-red">Читать дальше</button></a>
                 </div>
             </div>
         </section>
