--- a/pages/products.html
+++ b/pages/products.html
@@ -38,7 +38,7 @@
                 <!--Бургер-меню-->
                 <img src="../assets/images/Меню.svg" id="menu">
                 <div class="burger-menu" id="burger-menu" style="display: none;">
-                    <a href="#">Применения и рынки</a>
+                    <a href="../pages/application.html">Применения и рынки</a>
                     <a href="#">Решения</a>
 
                     <a href="../pages/products.html">Продукты</a>
