--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Канадская система кодирования и маркировки</title>
     <link rel="shortcut icon" href="./assets/images/Логотип.svg" type="image/x-icon">
     <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="styles/globals.css">
 </head>
 
 <body>
