--- a/pages/application.html
+++ b/pages/application.html
@@ -7,6 +7,7 @@
     <title>Отрасли применения</title>
     <link rel="shortcut icon" href="../assets/images/Логотип.svg" type="image/x-icon">
     <link rel="stylesheet" href="../styles/application.css">
+    <link rel="stylesheet" href="../styles/globals.css">
 </head>
 
 <body>
