--- a/pages/marking.html
+++ b/pages/marking.html
@@ -7,6 +7,7 @@
     <title>Промышленный струйный принтер</title>
     <link rel="shortcut icon" href="../assets/images/Логотип.svg" type="image/x-icon">
     <link rel="stylesheet" href="../styles/marking.css">
+    <link rel="stylesheet" href="../styles/globals.css">
 </head>
 
 <body>
