--- a/pages/products.html
+++ b/pages/products.html
@@ -7,6 +7,7 @@
     <title>Промышленный струйный принтер</title>
     <link rel="shortcut icon" href="../assets/images/Логотип.svg" type="image/x-icon">
     <link rel="stylesheet" href="../styles/products.css">
+    <link rel="stylesheet" href="../styles/globals.css">
 </head>
 
 <body>
@@ -58,7 +59,7 @@
         <section class="categories-section">
             <div class="container">
                 <div class="categories-header">
-                    <h2>РЕШЕНИЕ ДЛЯ КОДИРОВАНИЯ И МАРКИРОВКИ</h2>
+                    <h1>РЕШЕНИЕ ДЛЯ КОДИРОВАНИЯ И МАРКИРОВКИ</h1>
                     <p>Промышленный струйный принтер</p>
                 </div>
             </div>
