--- a/pages/ink.html
+++ b/pages/ink.html
@@ -7,6 +7,7 @@
     <title>Промышленные чернила для струйных принтеров</title>
     <link rel="shortcut icon" href="../assets/images/Логотип.svg" type="image/x-icon">
     <link rel="stylesheet" href="../styles/ink.css">
+    <link rel="stylesheet" href="../styles/globals.css">
 </head>
 
 <body>
@@ -51,6 +52,21 @@
     </header>
     <!--Главная-->
     <main>
+        <!-- Категории -->
+        <section class="categories-section">
+            <div class="container">
+                <div class="categories-header">
+                    <h1>ЧЕРНИЛА ДЛЯ ПОРОМЫШЛЕННЫХ СТРУЙНЫХ ПРИНТЕРОВ</h1>
+                    <p>Обеспечивает впечатляющие, долговечные и устойчивые результаты печати. ​​Прилипает к поверхности
+                        — независимо от обстоятельств.</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Чернила -->
+        <section class="ink">
+
+        </section>
 
     </main>
     <script src="../scripts/index.js"></script>
