--- a/pages/application.html
+++ b/pages/application.html
@@ -124,18 +124,21 @@
                         <div class="industry-category">
                             <h3>Напитки</h3>
                             <ul class="industry-list">
-                                <li>Яйца и яичные лотки</li>
-                                <li>Мешки с мукой</li>
+                                <li>Напитки</li>
+                                <li>Молочные продукты</li>
+                                <li>Пивоварни</li>
                                 <li>Кофейные пакетики</li>
                             </ul>
                         </div>
                     </div>
                     <div class="industry-column">
                         <div class="industry-category">
-                            <h3>Молочный</h3>
+                            <h3>Продукты питания</h3>
                             <ul class="industry-list">
+                                <li>Яйца и яичные лотки</li>
+                                <li>Мешки с мукой</li>
                                 <li>Упаковка для каннабиса</li>
-                                <li>Другие упакованные продукты питания</li>
+                                <li>Другие упакованные пищевые продукты</li>
                             </ul>
                         </div>
                     </div>
@@ -225,34 +228,34 @@
 
         <!-- Блок с контактами -->
         <section class="contact-info-section">
-            <div class="container">
-                <div class="contact-info-grid">
-                    <div class="contact-info-column">
-                        <img src="../assets/images/Логотип.svg" alt="RN Mark">
-                        <p>Компания RN Mark Inc. — производитель промышленных струйных принтеров в Канаде. Более 20 лет мы с
-                            удовольствием разрабатываем и поставляем доступные и высокопроизводительные кодировщики по всему
-                            миру.</p>
-                    </div>
-                    <div class="contact-info-column">
-                        <h3>Контакты</h3>
-                        <p>ООО ИнСофтРитейл (ИНН 7325105104)</p>
-                        <p>Адрес: РФ, г Ульяновск, ул. Рылеева, д.11, офис 4</p>
-                    </div>
-                    <div class="contact-info-column">
-                        <h3>Контактная информация</h3>
-                        <p>Телефон: +7 8422 58 63 70</p>
-                        <p>E-mail: office@insoftretail.ru</p>
-                    </div>
+            <div class="contact-info-grid">
+                <div class="contact-info-column">
+                    <a href="../index.html"><img src="../assets/images/Логотип.svg" class="logotype"></a>
+                    <p>Компания RN Mark Inc. — производитель промышленных струйных принтеров в Канаде. Более 20 лет мы с
+                        удовольствием разрабатываем и поставляем доступные и высокопроизводительные кодировщики по всему
+                        миру.</p>
                 </div>
-
-                <div class="copyright">
-                    <p>Авторские права © 2022–2025 Все права защищены.</p>
+                <div class="contact-info-column">
+                    <h3>Контакты</h3>
+                    <p>ООО ИнСофтРитейл (ИНН 7325105104)</p>
+                    <p>Адрес: РФ, г Ульяновск, ул. Рылеева, д.11, офис 4</p>
+                </div>
+                <div class="contact-info-column">
+                    <h3>Контактная информация</h3>
+                    <p>Телефон: +7 8422 58 63 70</p>
+                    <p>E-mail: office@insoftretail.ru</p>
                     <div class="copyright-img">
-                        <img src="" alt="">
-                        <img src="" alt="">
-                        <img src="" alt="">
+                        <a href="https://www.facebook.com/rnmarkinc"><img src="../assets/images/facebook.svg"></a>
+                        <a href="https://www.youtube.com/user/RNjetprinter/videos"><img src="../assets/images/youtube.svg"></a>
+                        <a href="https://www.linkedin.com/company/rn-mark-inc"><img src="../assets/images/in.svg"></a>
+                        <a href="https://www.instagram.com/rnmarkinc/"><img src="../assets/images/instagram.svg"></a>
+                        <a href="https://twitter.com/rnmarkinc"><img src="../assets/images/twitter.svg"></a>
                     </div>
                 </div>
+            </div>
+
+            <div class="copyright">
+                <p>Авторские права © 2022–2025 Все права защищены.</p>
             </div>
         </section>
         
