--- a/pages/ink.html
+++ b/pages/ink.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Промышленные чернила для струйных принтеров</title>
+    <title>Чернила для промышленных принтеров | RN Mark</title>
     <link rel="shortcut icon" href="../assets/images/Логотип.svg" type="image/x-icon">
-    <link rel="stylesheet" href="../styles/ink.css">
     <link rel="stylesheet" href="../styles/globals.css">
+    <link rel="stylesheet" href="../styles/ink.css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="top-bar">
                 <div class="logo">
-                    <a href="../index.html"><img src="../assets/images/Логотип.svg"></a>
+                    <a href="../index.html"><img src="../assets/images/Логотип.svg" alt="RN Mark"></a>
                 </div>
                 <nav>
                     <ul class="nav-menu">
@@ -29,19 +29,20 @@
                         <li class="menu-list"><a href="#">Онлайн покупки</a></li>
                     </ul>
                 </nav>
-                <!--Поиск-->
+
+                <!-- Поиск -->
                 <div class="searchContainer">
                     <input type="text" placeholder="Поиск..." class="searchInput">
                     <button class="searchButton">
                         <img src="../assets/images/Лупа.svg" width="30" height="30" class="searchIcon">
                     </button>
                 </div>
-                <!--Бургер-меню-->
-                <img src="../assets/images/Меню.svg" id="menu">
+
+                <!-- Бургер-меню -->
+                <img src="../assets/images/Меню.svg" id="menu" alt="Menu">
                 <div class="burger-menu" id="burger-menu" style="display: none;">
                     <a href="../pages/application.html">Применения и рынки</a>
                     <a href="#">Решения</a>
-
                     <a href="../pages/products.html">Продукты</a>
                     <a href="#">Поддержка</a>
                     <a href="#">Компания</a>
@@ -50,25 +51,276 @@
             </div>
         </div>
     </header>
-    <!--Главная-->
+
     <main>
-        <!-- Категории -->
-        <section class="categories-section">
+        <!-- Заголовок страницы -->
+        <section class="page-header">
             <div class="container">
-                <div class="categories-header">
-                    <h1>ЧЕРНИЛА ДЛЯ ПОРОМЫШЛЕННЫХ СТРУЙНЫХ ПРИНТЕРОВ</h1>
-                    <p>Обеспечивает впечатляющие, долговечные и устойчивые результаты печати. ​​Прилипает к поверхности
-                        — независимо от обстоятельств.</p>
+                <h1>ЧЕРНИЛА ДЛЯ ПРОМЫШЛЕННЫХ СТРУЙНЫХ ПРИНТЕРОВ</h1>
+                <p>Обеспечивает впечатляющие, долговечные и устойчивые результаты печати. ​​Прилипает к поверхности —
+                    независимо от обстоятельств.</p>
+                <div class="divider"></div>
+            </div>
+        </section>
+
+        <!-- Чернила на основе растворителей -->
+        <section class="ink-section">
+            <div class="container">
+                <div class="ink-header">
+                    <h2>Чернила на основе растворителей</h2>
+                    <div class="ink-divider"></div>
+                </div>
+
+                <div class="ink-description">
+                    <p>Чернила на основе растворителей специально разработаны для печати на непористых поверхностях.
+                        Чернила на основе растворителей от RN Mark — идеальный выбор, если вам необходимо наносить коды
+                        и маркировку на любые пористые или непористые поверхности.</p>
+                    <p class="color-info">Печать возможна в любом цвете по вашему выбору: оранжевый, желтый, белый,
+                        красный, черный и синий.</p>
+                </div>
+
+                <!-- Цветовые кубики -->
+                <div class="color-grid">
+                    <div class="color-card">
+                        <div class="color-swatch black"></div>
+                        <span class="color-name">Черные сольвентные чернила</span>
+                    </div>
+                    <div class="color-card">
+                        <div class="color-swatch blue"></div>
+                        <span class="color-name">Синие сольвентные чернила</span>
+                    </div>
+                    <div class="color-card">
+                        <div class="color-swatch orange"></div>
+                        <span class="color-name">Оранжевые сольвентные чернила</span>
+                    </div>
+                    <div class="color-card">
+                        <div class="color-swatch red"></div>
+                        <span class="color-name">Красные сольвентные чернила</span>
+                    </div>
+                    <div class="color-card">
+                        <div class="color-swatch white"></div>
+                        <span class="color-name">Белые сольвентные чернила</span>
+                    </div>
+                    <div class="color-card">
+                        <div class="color-swatch yellow"></div>
+                        <span class="color-name">Желтые растворимые чернила</span>
+                    </div>
+                </div>
+
+                <!-- Кнопка покупки -->
+                <div class="buy-now-container">
+                    <a href="#"><button class="buy-now-btn">КУПИТЬ СЕЙЧАС →</button></a>
                 </div>
             </div>
         </section>
 
-        <!-- Чернила -->
-        <section class="ink">
+        <!-- Чернила на масляной основе -->
+        <section class="ink-section alt-bg">
+            <div class="container">
+                <div class="ink-header">
+                    <h2>Чернила на масляной основе</h2>
+                    <div class="ink-divider"></div>
+                </div>
 
+                <div class="ink-description">
+                    <p>Принтеры, использующие чернила на масляной основе, специально разработаны для печати на пористых
+                        материалах. Если вам необходимо нанести код и маркировку даты производства, срока годности,
+                        серийного номера, штрихкода, логотипа и другой информации на картон, переработанную бумагу,
+                        гофрированные коробки и древесину, чернила на масляной основе — отличный выбор. Мы предлагаем
+                        чернила на масляной основе синего, черного, красного и зеленого цветов.</p>
+                    <p class="color-info">Мы предлагаем чернила на масляной основе синего, черного, красного и зеленого
+                        цветов.</p>
+                </div>
+
+                <!-- Цветовые кубики -->
+                <div class="color-grid four-colors">
+                    <div class="color-card">
+                        <div class="color-swatch black"></div>
+                        <span class="color-name">Черные масляные чернила</span>
+                    </div>
+                    <div class="color-card">
+                        <div class="color-swatch green"></div>
+                        <span class="color-name">Зеленые масляные чернила</span>
+                    </div>
+                    <div class="color-card">
+                        <div class="color-swatch red"></div>
+                        <span class="color-name">Красные масляные чернила</span>
+                    </div>
+                    <div class="color-card">
+                        <div class="color-swatch blue"></div>
+                        <span class="color-name">Синие масляные чернила</span>
+                    </div>
+                </div>
+
+                <!-- Кнопка покупки -->
+                <div class="buy-now-container">
+                    <a href="#" class="buy-now-btn">КУПИТЬ СЕЙЧАС →</a>
+                </div>
+            </div>
         </section>
 
+        <!-- Ассортимент чернил -->
+        <section class="ink-showcase">
+            <div class="container">
+                <div class="ink-showcase-header">
+                    <h2>Широкий ассортимент высококачественных чернил</h2>
+                    <p>Компания RN Mark предлагает широкий ассортимент высококачественных чернил в зависимости от ваших
+                        потребностей. Мы предлагаем высококонтрастные чернила, быстросохнущие чернила, смываемые
+                        чернила, термотропные чернила, чернила пищевого качества, масляные пигментные чернила,
+                        сольвентные пигментные чернила, термостойкие и химически стойкие к растворителям чернила.</p>
+                </div>
+
+                <div class="ink-features-grid">
+                    <div class="ink-feature-card">
+                        <h3>Высококонтрастные чернила</h3>
+                        <p>Идеально подходят для экструдированных изделий, таких как проволока и трубы.</p>
+                    </div>
+
+                    <div class="ink-feature-card">
+                        <h3>Пигментированные чернила</h3>
+                        <p>Белые, желтые или оранжевые пигментированные чернила — идеальное решение для темных
+                            поверхностей.</p>
+                    </div>
+
+                    <div class="ink-feature-card">
+                        <h3>Пищевые чернила</h3>
+                        <p>Идеально подходят для яиц, хлеба и шоколада.</p>
+                    </div>
+                </div>
+
+                <!-- Быстросохнущие чернила -->
+                <div class="fast-drying-section">
+                    <div class="fast-drying-content">
+                        <h3>Быстросохнущие чернила для напитков</h3>
+                        <div class="drying-info">
+                            <div class="drying-item">
+                                <span class="drying-badge">TIJ технология</span>
+                                <p>Идеально подходят для высокоскоростных производственных линий. Время высыхания 1-3
+                                    секунды.</p>
+                            </div>
+                            <div class="drying-item">
+                                <span class="drying-badge">Пьезотехнология</span>
+                                <p>Быстросохнущие чернила для напитков: время высыхания 10-15 секунд благодаря
+                                    пьезотехнологии высокого разрешения.</p>
+                            </div>
+                        </div>
+                        <div class="fda-approval">
+                            <p>Одобренные Министерством сельского хозяйства США чернила FDG, предназначенные для
+                                маркировки яичной скорлупы, являются лучшим и самым безопасным вариантом.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Специальные чернила -->
+                <div class="ink-features-grid">
+                    <div class="ink-feature-card">
+                        <h3>Термотропные чернила от черного к красному</h3>
+                        <p>Идеально подходят для алюминиевых банок и жестяных коробок; после воздействия тепла цвет
+                            изменится с черного на красный.</p>
+                    </div>
+
+                    <div class="ink-feature-card">
+                        <h3>Медленно сохнущие пигментированные чернила на основе растворителей</h3>
+                        <p>Мы предлагаем эти чернила белого, желтого и оранжевого цвета.</p>
+                        <div class="mini-color-dots">
+                            <span class="color-dot white-dot"></span>
+                            <span class="color-dot yellow-dot"></span>
+                            <span class="color-dot orange-dot"></span>
+                        </div>
+                    </div>
+
+                    <div class="ink-feature-card">
+                        <h3>Масляные чернила медленного высыхания</h3>
+                        <p>Мы предлагаем эти чернила в черном цвете.</p>
+                        <div class="mini-color-dots">
+                            <span class="color-dot black-dot"></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Список информации -->
+        <section class="links">
+            <div class="container-li">
+                <div class="sections">
+                    <h2>Решения</h2>
+                    <ul>
+                        <li><a href="#">Печатная машина с фрикционным подающим механизмом</a></li>
+                        <li><a href="#">Системы кодирования и маркировки для фармацевтики</a></li>
+                        <li><a href="#">Промышленная печать на пластиковых бутылках</a></li>
+                        <li><a href="#">Промышленная печать на стеклянных бутылках</a></li>
+                        <li><a href="#">Системы кодирования и маркировки яиц</a></li>
+                    </ul>
+                </div>
+                <div class="sections">
+                    <h2>Продукты</h2>
+                    <ul>
+                        <li><a href="#">Система массовой струйной печати</a></li>
+                        <li><a href="#">Кодировка мелкими символами</a></li>
+                        <li><a href="#">Кодировка крупными символами</a></li>
+                        <li><a href="#">Расходные материалы</a></li>
+                        <li><a href="#">Программное обеспечение</a></li>
+                    </ul>
+                </div>
+                <div class="sections">
+                    <h2>Поддержка</h2>
+                    <ul>
+                        <li><a href="#">Техническая поддержка</a></li>
+                        <li><a href="#">Запланируйте виртуальную демонстрацию</a></li>
+                        <li><a href="#">Центр загрузки</a></li>
+                        <li><a href="#">Видео</a></li>
+                        <li><a href="#">Часто задаваемые вопросы</a></li>
+                        <li><a href="#">Карта сайта</a></li>
+                    </ul>
+                </div>
+                <div class="sections">
+                    <h2>Компания</h2>
+                    <ul>
+                        <li><a href="#">О RN Mark</a></li>
+                        <li><a href="#">События</a></li>
+                        <li><a href="#">Дистрибьюторы</a></li>
+                        <li><a href="#">Брошюры о продукции</a></li>
+                        <li><a href="#">Блог</a></li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <!-- Блок с контактами -->
+        <section class="contact-info-section">
+            <div class="contact-info-grid">
+                <div class="contact-info-column">
+                    <a href="../index.html"><img src="../assets/images/Логотип.svg" class="logotype"></a>
+                    <p>Компания RN Mark Inc. — производитель промышленных струйных принтеров в Канаде. Более 20 лет мы с
+                        удовольствием разрабатываем и поставляем доступные и высокопроизводительные кодировщики по всему
+                        миру.</p>
+                </div>
+                <div class="contact-info-column">
+                    <h3>Контакты</h3>
+                    <p>ООО ИнСофтРитейл (ИНН 7325105104)</p>
+                    <p>Адрес: РФ, г Ульяновск, ул. Рылеева, д.11, офис 4</p>
+                </div>
+                <div class="contact-info-column">
+                    <h3>Контактная информация</h3>
+                    <p>Телефон: +7 8422 58 63 70</p>
+                    <p>E-mail: office@insoftretail.ru</p>
+                    <div class="copyright-img">
+                        <a href="https://www.facebook.com/rnmarkinc"><img src="../assets/images/facebook.svg"></a>
+                        <a href="https://www.youtube.com/user/RNjetprinter/videos"><img src="../assets/images/youtube.svg"></a>
+                        <a href="https://www.linkedin.com/company/rn-mark-inc"><img src="../assets/images/in.svg"></a>
+                        <a href="https://www.instagram.com/rnmarkinc/"><img src="../assets/images/instagram.svg"></a>
+                        <a href="https://twitter.com/rnmarkinc"><img src="../assets/images/twitter.svg"></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="copyright">
+                <p>Авторские права © 2022–2025 Все права защищены.</p>
+            </div>
+        </section>
     </main>
+
     <script src="../scripts/index.js"></script>
 </body>
 
