--- a/pages/products.html
+++ b/pages/products.html
@@ -498,7 +498,7 @@
         <section class="contact-info-section">
             <div class="contact-info-grid">
                 <div class="contact-info-column">
-                    <img src="../assets/images/Логотип.svg">
+                    <a href="../index.html"><img src="../assets/images/Логотип.svg" class="logotype"></a>
                     <p>Компания RN Mark Inc. — производитель промышленных струйных принтеров в Канаде. Более 20 лет мы с
                         удовольствием разрабатываем и поставляем доступные и высокопроизводительные кодировщики по всему
                         миру.</p>
@@ -512,23 +512,21 @@
                     <h3>Контактная информация</h3>
                     <p>Телефон: +7 8422 58 63 70</p>
                     <p>E-mail: office@insoftretail.ru</p>
+                    <div class="copyright-img">
+                        <a href="https://www.facebook.com/rnmarkinc"><img src="../assets/images/facebook.svg"></a>
+                        <a href="https://www.youtube.com/user/RNjetprinter/videos"><img src="../assets/images/youtube.svg"></a>
+                        <a href="https://www.linkedin.com/company/rn-mark-inc"><img src="../assets/images/in.svg"></a>
+                        <a href="https://www.instagram.com/rnmarkinc/"><img src="../assets/images/instagram.svg"></a>
+                        <a href="https://twitter.com/rnmarkinc"><img src="../assets/images/twitter.svg"></a>
+                    </div>
                 </div>
             </div>
 
             <div class="copyright">
                 <p>Авторские права © 2022–2025 Все права защищены.</p>
-                <div class="copyright-img">
-                    <img src="">
-                    <img src="">
-                    <img src="">
-                </div>
-
             </div>
         </section>
-
     </main>
-
-
     <script src="../scripts/index.js"></script>
 </body>
 
